--- a/PY0101EN-5.2_API_2.ipynb
+++ b/PY0101EN-5.2_API_2.ipynb
@@ -124,7 +124,8 @@
    "source": [
     "from ibm_watson import SpeechToTextV1 \n",
     "import json\n",
-    "from ibm_cloud_sdk_core.authenticators import IAMAuthenticator\n"
+    "from ibm_cloud_sdk_core.authenticators import IAMAuthenticator\n",
+    "import config"
    ]
   },
   {
