--- a/PY0101EN-5.2_API_2.ipynb
+++ b/PY0101EN-5.2_API_2.ipynb
@@ -141,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url_s2t = 'https://api.us-south.speech-to-text.watson.cloud.ibm.com/instances/c875435e-efc4-431e-b9f3-5bc10e59af40'"
+    "url_s2t = config.url_s2t"
    ]
   },
   {
@@ -162,7 +162,7 @@
    },
    "outputs": [],
    "source": [
-    "iam_apikey_s2t = \"ij2xS2XtjfNWGCYYDpxlzikAsZfYKgI6hsh_5WoeVAxK\""
+    "iam_apikey_s2t = config.iam_apikey_s2t"
    ]
   },
   {
@@ -543,7 +543,7 @@
    },
    "outputs": [],
    "source": [
-    "url_lt='https://api.us-south.language-translator.watson.cloud.ibm.com/instances/0c5a41f7-1563-4a2d-bd91-c9f6615e3a5c'"
+    "url_lt = config.url_lt"
    ]
   },
   {
@@ -564,7 +564,7 @@
    },
    "outputs": [],
    "source": [
-    "apikey_lt='B8jtXcqwh0jHeqIZvl_iWmtyX9dg-oIGV_yrhZTjoWCq'"
+    "apikey_lt = config.apikey_lt"
    ]
   },
   {
